--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Android13Test</string>
+    <string name="hello_android13">안녕, 안드로이드 13</string>
 </resources>
